# stock_report

./: .gitignore  AAPL.json  AAPL_new.json  ChartJs.astro.master  GEMINI.md  HANDOVER_MEMO.md  NEE_DCF_Analysis.xlsx  check_tsla_raw.py  debug_rating_prices.py  package-lock.json  package.json  pnpm-lock.yaml  replace_controls.py  reproduce_issue.py  requirements.txt  run_log.txt  test_aapl.py  test_bulk.json  test_dom.js  test_fetch_single.py  test_script.js  test_stress.py
code/: STRUCTURE.md  backfill_transcript_financials.py  check_blk.py  check_dis_data.py  check_spgi.py  debug_dis.py  debug_spgi_assets.py  debug_spgi_assets_2.py  fetch_raw_data.py  find_recent.py  fundamentals.py  generate_googl_meta.py  generate_json_only.py  generate_json_reports.py  generate_msft_only.py  generate_stock_sheet.py  generate_transcript_report.py  main.py  main.py.bak  market_data.py  movement_reasons.py  performance_comparison.py  pyproject.toml  regenerate_blk.py  regenerate_spgi.py  report_generator.py  requirements.txt  risk_return.py  run_log.txt  run_transcript_batch.py  stock_list_az.csv  test_broader.py  test_defeatbeta.py  test_fix.py  test_gemini.py  test_mmm_error.py  test_original_logic.py  test_revenue_breakdown.py  test_revenue_breakdown_batch.py  test_run.py  (+2 more)
code/analysis/: .gitignore  README.md  build_dataset.py  queries.sql  query.py
code/data/: ja_translations.csv
code/experiments/: test_stockdex_nvda.py
code/raw_data/: ABBV_raw.json  ABNB_raw.json  ABT_raw.json  ACN_raw.json  AES_raw.json  AFL_raw.json  ALB_raw.json  ALGN_raw.json  ALLE_raw.json  ALL_raw.json  (+12 more)
(+2427 files in other folders)
