[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "black==26.1.0",
    "blinker==1.9.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "curl-cffi==0.13.0",
    "docopt==0.6.2",
    "flask==3.1.2",
    "frozendict==2.4.7",
    "greenlet==3.3.0",
    "grip==4.6.2",
    "idna==3.11",
    "isort==7.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "lxml==6.0.2",
    "markdown==3.10.1",
    "markupsafe==3.0.3",
    "msgpack==1.1.2",
    "multitasking==0.0.12",
    "mypy-extensions==1.1.0",
    "narwhals==2.15.0",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.0",
    "path-and-address==2.0.1",
    "pathspec==1.0.3",
    "peewee==3.19.0",
    "pip==25.3",
    "platformdirs==4.5.1",
    "plotly==6.5.2",
    "polars==1.37.1",
    "polars-runtime-32==1.37.1",
    "protobuf==6.33.5",
    "pyarrow==23.0.0",
    "pycparser==3.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pytokens==0.4.0",
    "pytz==2025.2",
    "requests==2.32.5",
    "setuptools==80.10.1",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "websockets==16.0",
    "werkzeug==3.1.5",
    "yfinance==1.1.0",
]
